<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/jogadoresTx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Participantes: 2" />
    <TextView
        android:id="@+id/jogadasTx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jogadas: 1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/gray">
            <ImageButton
                android:id="@+id/pedraBt"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@mipmap/zero"
                android:scaleType="fitCenter"
                android:contentDescription="@string/pedra"
                android:onClick="jogar"
                >
            </ImageButton>
            <TextView
                android:id="@+id/jogador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/gray">
            <ImageButton
                android:id="@+id/papelBt"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@mipmap/five"
                android:scaleType="fitCenter"
                android:contentDescription="@string/papel"
                android:onClick="jogar"
                >
            </ImageButton>
            <TextView
                android:id="@+id/jogador2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/gray">
            <ImageButton
                android:id="@+id/tesouraBt"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:src="@mipmap/two"
                android:scaleType="fitCenter"
                android:contentDescription="@string/tesoura"
                android:onClick="jogar"
                >
            </ImageButton>
            <TextView
                android:id="@+id/jogador3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/jog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Jogada 1:"></TextView>
        <TextView
            android:id="@+id/jog1Vencedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/jog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Jogada 2:"></TextView>
        <TextView
            android:id="@+id/jog2Vencedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/jog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Jogada 3:"></TextView>
        <TextView
            android:id="@+id/jog3Vencedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/jog4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Jogada 4:"></TextView>
        <TextView
            android:id="@+id/jog4Vencedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/jog5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Jogada 5:"></TextView>
        <TextView
            android:id="@+id/jog5Vencedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"></TextView>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">
        <TextView
            android:id="@+id/vencedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20dp"></TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/fim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="FIM DO JOGO"
        android:visibility="gone"></TextView>
</LinearLayout>
